--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "stream-chat": "^6.7.3",
+    "stream-chat-react": "^9.1.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
