--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
+    "compressorjs": "^1.1.1",
     "i": "^0.3.7",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
