--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "buffer": "^6.0.3",
     "i": "^0.3.7",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.34",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-moment": "^1.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "socket.io": "^4.5.1",
